--- a/telnet/pom.xml
+++ b/telnet/pom.xml
@@ -4,18 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ssh</artifactId>
+    <artifactId>telnet</artifactId>
     <groupId>com.javasc</groupId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <dependencies>
-        <dependency>
-            <artifactId>util</artifactId>
-            <groupId>com.javasc</groupId>
-            <version>0.1.0-SNAPSHOT</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <artifactId>test-util</artifactId>
             <groupId>com.javasc</groupId>
@@ -23,14 +17,14 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.sshd</groupId>
-            <artifactId>sshd-core</artifactId>
-            <version>1.1.0</version>
+            <artifactId>util</artifactId>
+            <groupId>com.javasc</groupId>
+            <version>0.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.jcraft</groupId>
-            <artifactId>jsch</artifactId>
-            <version>0.1.53</version>
+            <groupId>net.wimpi</groupId>
+            <artifactId>telnetd-x</artifactId>
+            <version>2.1.1</version>
         </dependency>
     </dependencies>
 
