--- a/test-util/pom.xml
+++ b/test-util/pom.xml
@@ -4,18 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>javaasc</artifactId>
+    <artifactId>test-util</artifactId>
     <groupId>com.javasc</groupId>
     <version>0.1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>test-util</module>
-        <module>util</module>
-        <module>ssh</module>
-        <module>telnet</module>
-    </modules>
+    <packaging>jar</packaging>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+    </dependencies>
 
 </project>
-
-
-
