--- a/container/pom.xml
+++ b/container/pom.xml
@@ -11,12 +11,22 @@
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
 
-    <artifactId>ssh</artifactId>
+    <artifactId>container</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <artifactId>shell</artifactId>
+            <groupId>com.javasc</groupId>
+            <version>${javaasc-version}</version>
+        </dependency>
+        <dependency>
+            <artifactId>ssh</artifactId>
+            <groupId>com.javasc</groupId>
+            <version>${javaasc-version}</version>
+        </dependency>
+        <dependency>
+            <artifactId>telnet</artifactId>
             <groupId>com.javasc</groupId>
             <version>${javaasc-version}</version>
         </dependency>
@@ -30,16 +40,6 @@
             <groupId>com.javasc</groupId>
             <version>${javaasc-version}</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.sshd</groupId>
-            <artifactId>sshd-core</artifactId>
-            <version>1.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.jcraft</groupId>
-            <artifactId>jsch</artifactId>
-            <version>0.1.53</version>
         </dependency>
     </dependencies>
 
