--- a/telnet/pom.xml
+++ b/telnet/pom.xml
@@ -4,27 +4,42 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <artifactId>parent</artifactId>
+        <groupId>com.javasc</groupId>
+        <version>0.1.0-SNAPSHOT</version>
+        <relativePath>../parent/pom.xml</relativePath>
+    </parent>
+
     <artifactId>telnet</artifactId>
-    <groupId>com.javasc</groupId>
-    <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
-            <artifactId>test-util</artifactId>
-            <groupId>com.javasc</groupId>
-            <version>0.1.0-SNAPSHOT</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <artifactId>util</artifactId>
             <groupId>com.javasc</groupId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>${javaasc-version}</version>
+        </dependency>
+        <dependency>
+            <artifactId>shell</artifactId>
+            <groupId>com.javasc</groupId>
+            <version>${javaasc-version}</version>
+        </dependency>
+        <dependency>
+            <artifactId>test-util</artifactId>
+            <groupId>com.javasc</groupId>
+            <version>${javaasc-version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>net.wimpi</groupId>
             <artifactId>telnetd-x</artifactId>
             <version>2.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.4</version>
         </dependency>
     </dependencies>
 
