--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,24 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <artifactId>parent</artifactId>
+        <groupId>com.javasc</groupId>
+        <version>0.1.0-SNAPSHOT</version>
+        <relativePath>parent/pom.xml</relativePath>
+    </parent>
+
     <artifactId>javaasc</artifactId>
-    <groupId>com.javasc</groupId>
-    <version>0.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+
     <modules>
+        <module>parent</module>
         <module>test-util</module>
         <module>util</module>
         <module>ssh</module>
         <module>telnet</module>
+        <module>shell</module>
+        <module>container</module>
     </modules>
 
 </project>
