--- a/telnet/src/main/resources/telnet.properties
+++ b/telnet/src/main/resources/telnet.properties
@@ -33,7 +33,7 @@ term.xterm.aliases=
 shells=simple
 
 # shell implementations
-shell.simple.class=org.crsh.telnet.term.TelnetHandler
+shell.simple.class=com.javaasc.telnet.server.TelnetHandler
 
 #####################
 # Listeners Section #
