--- a/container/pom.xml
+++ b/container/pom.xml
@@ -21,6 +21,11 @@
             <version>${javaasc-version}</version>
         </dependency>
         <dependency>
+            <artifactId>entity</artifactId>
+            <groupId>com.javasc</groupId>
+            <version>${javaasc-version}</version>
+        </dependency>
+        <dependency>
             <artifactId>ssh</artifactId>
             <groupId>com.javasc</groupId>
             <version>${javaasc-version}</version>
