--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -13,6 +13,19 @@
         <javaasc-version>0.1.0-SNAPSHOT</javaasc-version>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
 
 
