--- a/util/pom.xml
+++ b/util/pom.xml
@@ -33,6 +33,11 @@
             <version>1.7.19</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
 
 </project>
